BuildHughes/translation-tool/inputs/source_meta/objects/HnsSiteCrossPolls__x.object
<CustomObject>
    <description>HnsSiteCrossPolls</description>
    <externalDataSource>PSView</externalDataSource>
    <externalName>HnsSiteCrossPolls</externalName>
    <fields>
        <fullName>CENTRAL_DB_ID__c</fullName>
        <description>CENTRAL_DB_ID</description>
        <externalDeveloperName>CENTRAL_DB_ID</externalDeveloperName>
        <label>CENTRAL_DB_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SETID__c</fullName>
        <description>SETID</description>
        <externalDeveloperName>SETID</externalDeveloperName>
        <label>SETID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SITE_ID__c</fullName>
        <description>SITE_ID</description>
        <externalDeveloperName>SITE_ID</externalDeveloperName>
        <label>Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_COPOLLVL__c</fullName>
        <description>Z_COPOLLVL</description>
        <externalDeveloperName>Z_COPOLLVL</externalDeveloperName>
        <label>Co Pol Lvl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_CROSSPOLID__c</fullName>
        <description>Z_CROSSPOLID</description>
        <externalDeveloperName>Z_CROSSPOLID</externalDeveloperName>
        <label>Cross Pol ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_CROSSPOLLVL__c</fullName>
        <description>Z_CROSSPOLLVL</description>
        <externalDeveloperName>Z_CROSSPOLLVL</externalDeveloperName>
        <label>Cross Pol Lvl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_ISOLATION__c</fullName>
        <description>Z_ISOLATION</description>
        <externalDeveloperName>Z_ISOLATION</externalDeveloperName>
        <label>Isolation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_METHOD__c</fullName>
        <description>Z_METHOD</description>
        <externalDeveloperName>Z_METHOD</externalDeveloperName>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_RESULT__c</fullName>
        <description>Z_RESULT</description>
        <externalDeveloperName>Z_RESULT</externalDeveloperName>
        <label>Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_SERIAL_NO__c</fullName>
        <description>Z_SERIAL_NO</description>
        <externalDeveloperName>Z_SERIAL_NO</externalDeveloperName>
        <label>Serial No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_SIGNAL__c</fullName>
        <description>Z_SIGNAL</description>
        <externalDeveloperName>Z_SIGNAL</externalDeveloperName>
        <label>Signal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_SOURCE__c</fullName>
        <description>Z_SOURCE</description>
        <externalDeveloperName>Z_SOURCE</externalDeveloperName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_TESTTYPE__c</fullName>
        <description>Z_TESTTYPE</description>
        <externalDeveloperName>Z_TESTTYPE</externalDeveloperName>
        <label>Test Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_TEST_DATE__c</fullName>
        <description>Z_TEST_DATE</description>
        <externalDeveloperName>Z_TEST_DATE</externalDeveloperName>
        <label>Test Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HnsSiteCrossPolls</label>
    <pluralLabel>HnsSiteCrossPolls</pluralLabel>
</CustomObject>